loopstudios-landing-page-main/styles.css
body {
    font-size: 15pt;
}

.header {
    background-image: url("images/desktop/image-hero.jpg");
    background-size: 100% 100%;
    width: 100vw;
    height: auto;    
    color: white;
    padding-bottom: 100px;

}

.navbar {
    padding: 50px;    
}

.headertext {
    border-style: solid;
    border-width: 2px;
    font-size: 35pt;
    width: 30%;
    margin-left: 10%;
}

.flexcontainer {
    position: absolute;
    height: 80vh;
    width: 100vw;
}

.vrimage {
    padding-left: 10%;
    padding-top: 10%;
    width: 60%;
    position: relative;
}

.vrimage img {
    float: left;
    width: 70%;
    z-index: 1;
    position: absolute;
}

.vrtext {
    border-style: solid;
    border-color: white;
    padding: 10%;
    width: 90%;
    position: relative;
    background-color: white;
    margin-top: 30%;
    margin-left: 70%;
    z-index: 2;
}

.ourcreations {
    width: 100%;
    margin-left: 10%;    
    margin-top: 15%;
}

.ourcreations h1 {
    float: left;
}

.button {
    float: right;
    margin-right: 30%;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 5px;
    padding-bottom: 5px;
}

.container {
    margin-top: 20%;
    width: 90%;
    margin-left: 5%;
}

.row {
    width: 100%;
}

.text-left {
    color: white;
    bottom: 20px;
    left: 20px;
}

.position-relative {
    padding-top: 20px;
    width: 100%;
}

footer {
    color: white;
    /* background-color: black; */
}

.footer embed {
    padding-left: 5px;
    padding-right: 5px;
}

ul {
    color: white;
}

.footer a:visited {
    color: white;
}

